Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4423

C++ Broker Dynamic and static federation should not declare existing queues

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.18
    • 0.19
    • C++ Broker
    • None

    Description

      When configuring either a dynamic or static federated link, it is possible to provide the name of an existing queue to utilize. The issue is that the destination broker of the federated route will attempt to declare the queue regardless of whether or not it should be using an existing queue.

      This can result in a race condition if the pre-existing queue is not yet available on the source broker. When the destination broker creates a queue it will use default queue settings (i.e. trace/exclude, reject policy, default size limits) and not the desired configured settings that the queue will have when created properly on the source broker.

      The proposal to fix this issue is if a queue name was provided during a bridge declaration then the broker should not attempt to declare the queue. When no name is provided then the broker may go ahead and declare an exclusive queue.

      Attachments

        Activity

          People

            chug Charles E. Rolke
            chug Charles E. Rolke
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: