QPID-4423 C++ Broker federated bridge creation should not declare named queues.

Named queues are assumed to exist and should not be declared during bridge creation.



git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1406809 13f79535-47bb-0310-9956-ffa450edef68